tests/error/comprehension_errors/pattern_override2.err
Guppy compilation failed. Error in file $FILE:13

11:    @guppy(module)
12:    def foo(qs: list[qubit] @owned, xs: list[int]) -> list[int]:
13:        return [q for q in qs for q in xs]
                         ^
GuppyTypeError: Variable `q` with linear type `qubit` is not used
